bk_ida/gccida/g3/gen_tablejump
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_tablejump/src/insn-emit.c:14391:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_tablejump/src/obj/insn-emit.o] Error 1
